test/dummy/app/serializers/syntax_error/user_serializer.rb
# frozen_string_literal: true

class SyntaxError::UserSerializer < ActiveModel::Serializer

  attributes(
    :id,
  )

en
